--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>JS File Explorer</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://wyndchyme.github.io/js-fileexplorer/style.css">
 </head>
 <body>
     <h1>This is an example of a file explorer using this script's GitHub repository.</h1>
             <ul id="repoTree" class="file-tree" style="overflow-x: hidden;"></ul>         
-    <script src="/explorer.js"></script>
+    <script src="https://wyndchyme.github.io/js-fileexplorer/explorer.js"></script>
 </body>
 <!-- This example can be used in your projects under the terms of the Apache License 2.0.-->
 </html>
